<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Injection Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contact">Add Contact</string>
    <string name="view_contacts">View Contacts</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="contacts">Contacts</string>
    <string name="user_prompt_username">Enter your username</string>
    <string name="action_settings">Settings</string>
    <string name="user_prompt_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="oscar">Oscar</string>
    <string name="jasmine">Jasmine</string>
    <string name="hero">Hero</string>
    <string name="inject_1">Inject 1</string>
    <string name="inject_2">Inject 2</string>
    <string name="inject_3">Inject 3</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="title_activity_view_contacts">ViewContactsActivity</string>
    <string name="title_activity_select_option">SelectOptionActivity</string>

</resources>
